fat: added media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ main {
 }
 
 .heading__produtos {
-    width: 590px;
+    max-width: 590px;
     height: 100%;
     margin-bottom: 72px;
 
@@ -115,7 +115,7 @@ main {
 
 .card__produto {
     border: 1px solid green;
-    width: 384px;
+    width: 336px;
     height: 426px;
 }
 
@@ -154,12 +154,97 @@ h6 {
     color: var(--brand-color);
 }
 
-.card__produto_preco {
+/* Preço */
+.card__produto_preco h6 {
     font-size: 18px;
     line-height: 28px;
     font-family: "Space Grotesk", sans-serif;
 }
 
-h1 {
-    color: var(--white);
+/* Responsividade */
+@media (max-width: 768px) {
+
+    .top__fixed {
+        height: 41px;
+        font-size: 16px;
+    }
+
+    .hero {
+        height: 350px;
+    }
+
+    .hero__content h1 {
+        font-size: 18px;
+    }
+
+    .hero__content h2 {
+        font-size: 24px;
+    }
+
+    .hero__content p {
+        font-size: 18px;
+        line-height: 28px;
+    }
+
+    .heading__produtos {
+        padding-inline: 20px;
+    }
+
+    .heading__produtos h3 {
+        font-size: 24px;
+    }
+
+    .heading__produtos p {
+        font-size: 16px;
+        line-height: 26px;
+    }
+
+    .lista__produtos {
+        margin-block: 32px;
+        gap: 32px;
+    }
+
+    .card__produto_detalhes h4 {
+        font-size: 18px;
+    }
+
+    .card__produto_detalhes h5 {
+        font-size: 16px;
+    }
+
+    .card__produto h6 {
+        font-size: 20px;
+    }
+
+}
+
+@media (max-width: 375px) {
+
+    .top__fixed {
+        height: 39px;
+
+    }
+
+    .hero__content p {
+        font-size: 16px;
+        line-height: 26px;
+    }
+
+    .heading__produtos h3 {
+        font-size: 20px;
+    }
+
+    .heading__produtos p {
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    .lista__produtos {
+        margin-block: 24px;
+        gap: 24px;
+    }
+
+    .card__produto_detalhes h4 {
+        font-size: 16px;
+    }
 }
