--- a/css/styles.css
+++ b/css/styles.css
@@ -334,22 +334,22 @@ h6 {
     height: 40px;
     border: 1px solid #ccc;
     border-radius: 8px;
-        display: flex;
+    display: flex;
         align-items: center;
         justify-content: center;
     }
     
-    .numeros:hover {
-        border-color: var(--dark);
-        cursor: pointer;
-    }
+.numeros:hover {
+    border-color: var(--dark);
+    cursor: pointer;
+}
     
-    .radio {
-        display: none;
-    }
+.radio {
+    display: none;
+}
     
-    .selecionado {
-        border-color: var(--dark);
+.selecionado {
+    border-color: var(--dark);
 }
 
 .descricao {
@@ -438,7 +438,7 @@ label {
     cursor: pointer;
     position: absolute;
     bottom: 5px;
-    right: 0;
+    right: 5px;
     margin-left: 5px;
 }
 
@@ -509,4 +509,51 @@ table td {
 
 tfoot {
     text-align: right;
+}
+/* DETALHES DO CARRINHO */
+.carrinho__detalhes {
+    width: 100%;
+    margin-block: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.carrinho__detalhes label,
+.carrinho__detalhes h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+/* .carrinho__detalhes .frete */
+.carrinho__detalhes .frete p {
+    margin-bottom: 10px;
+}
+
+/* .carrinho__detalhes .cupom_desconto */
+.cupom_desconto input {
+    min-width: 320px;
+}
+
+/* .carrinho__detalhes .resumo */
+.carrinho__detalhes .resumo {
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+
+.resumo ul {
+    margin-bottom: 20px;
+}
+
+.resumo li {
+    font-size: 16px;
+    line-height: 48px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+}
+
+.resumo li:first-child {
+    border-top: 1px solid #ccc;
 }
