--- a/css/styles.css
+++ b/css/styles.css
@@ -422,7 +422,7 @@ label {
     width: 100%;
     height: 50px;
     border-radius: 50px;
-    border: 1px solid #ccc;
+    /* border: 1px solid; */
     font-size: 20px;
     padding-left: 20px;
 }
@@ -556,4 +556,18 @@ tfoot {
 
 .resumo li:first-child {
     border-top: 1px solid #ccc;
+}
+
+ /* Validações - form Identificacao */
+.campo-invalido {
+    border-color: red;
+}
+
+.campo-valido {
+    border-color: green;
+}
+
+.erro {
+    color: red;
+    margin-left: 5px;
 }
