--- a/css/styles.css
+++ b/css/styles.css
@@ -445,6 +445,14 @@ label {
 .input button:hover {
     border-color: #222;
 }
+select {
+width: 100%;
+height: 50px;
+border-radius: 50px;
+/* border: 1px solid; */
+font-size: 20px;
+padding-left: 20px;
+}
 
 details a {
     color: var(--dark);
