--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ body {
     position: relative;
 }
 
+.btn__carrinho_user {
+    display: flex;
+    align-items: center;
+}
 
 .btn__carrinho span {
     margin-right: 10px;
@@ -88,9 +92,10 @@ body {
     height: 64px;
     background-color: var(--white_soft);
     font-weight: 500;
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 24px;
 }
 
 .link_home {
@@ -106,7 +111,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -145,7 +149,7 @@ main {
     align-items: center;
     justify-content: center;
     display: flex;
-        flex-direction: column;
+    flex-direction: column;
 }
 
 .produtos {
@@ -583,4 +587,69 @@ tfoot {
 .erro {
     color: red;
     margin-left: 5px;
+}
+
+/* Aula 25 - Formulário Logar */
+.icone { 
+    user-select: none;
+}
+
+/* modal login ou pop-up login */
+.modal_login {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: 300px;
+    background-color: var(--white-soft);
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    z-index: 10; /*Certifique-se que o pop-up apareça acima de outro conteúdo */
+}
+
+.modal_login h2 {
+    text-align: center;
+}
+
+.modal_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 9; /* para posicionar atrás do pop-up */
+}
+
+.modal_login.hidden, .modal_overlay.hidden {
+    display: none;
+}
+
+.modal_login.show, .modal_overlay.show {
+    display: block;
+}
+
+.btn_close_login {
+    position: absolute;
+    right: 16px;
+    top: 20px;
+    text-align: center;
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    padding: 2px 5px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+}
+
+.btn_close_login:hover {
+    font-weight: bold;
+    color: #fff;
+    background-color: #222;
+}
+
+.modal_login .botao {
+    margin-top: 20px;
 }
